force-app/main/default/objects/Application_Detail_Language__c/fields/Reference_Application_Detail_Language__c.field-meta.xml
<CustomField>
    <fullName>Reference_Application_Detail_Language__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Application Detail Language</label>
    <referenceTo>Reference_Application_Detail_Language__c</referenceTo>
    <relationshipLabel>Application Detail Languages</relationshipLabel>
    <relationshipName>Application_Detail_Languages</relationshipName>
    <type>Lookup</type>
</CustomField>