force-app/main/default/objects/Application_Detail_Language__c/fields/Translated_Text__c.field-meta.xml
<CustomField>
    <fullName>Translated_Text__c</fullName>
    <label>Translated Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>